# injectguard

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
action/: action.yml
docs/: HOW_IT_WORKS.md  REVIEW_PROTOCOL.md  THREAT_MODEL.md  blog-post-devto.md  blog-post-dzone.html
docs/design/: PR-3-function-local-scoping.md  PR-4-fixture-inventory.md  PR-4-src-layout.md
docs/eval/: PR-4-corpus-results.md
docs/rules/: IG001.md  IG002.md
src/agentguard/: __init__.py  cli.py  engine.py  notebook.py  taxonomy.py  taxonomy.yaml
src/agentguard/output/: __init__.py  json_out.py  pretty.py  sarif.py
src/agentguard/parsers/: __init__.py  base.py  langgraph.py  openai_agents.py
src/agentguard/rules/: __init__.py  base.py  confused_deputy.py  prompt_injection.py
src/agentic_guard/: __init__.py  cli.py  engine.py  taxonomy.py  taxonomy.yaml
src/agentic_guard/analysis/: __init__.py  symbol_table.py
src/agentic_guard/output/: __init__.py  json_out.py  pretty.py  sarif.py
src/agentic_guard/parsers/: __init__.py  base.py  langgraph.py  openai_agents.py
src/agentic_guard/rules/: __init__.py  base.py  confused_deputy.py  prompt_injection.py
src/injectguard/: __init__.py  cli.py  engine.py  ir.py  taxonomy.py  taxonomy.yaml
src/injectguard/output/: __init__.py  json_out.py  pretty.py  sarif.py
src/injectguard/parsers/: __init__.py  base.py  langgraph.py  openai_agents.py
src/injectguard/rules/: __init__.py  base.py  confused_deputy.py  prompt_injection.py
tests/: test_cross_module_resolution.py  test_fp_fixes.py  test_notebook.py  test_openai_parser.py  test_output.py  test_parser.py  test_rules.py  test_src_layout.py  test_typed_agents.py
tests/fixtures/safe/: email_with_interrupt.py  langgraph_constant_prompt.py  not_an_agent_file.py  notebook_gated.ipynb  openai_callable_instructions.py  openai_constant_prompt.py  openai_safe_helper.py  openai_stop_at_tools.py  openai_stop_on_first_tool.py  sources_only.py  static_prompt.py
tests/fixtures/typed_agents/: factory.py  module_attribute.py  none_context.py  (+1 more)
vscode-extension/: README.md  package.json
vscode-extension/src/: extension.ts
(+62 files in other folders)
