[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "injectguard"
version = "0.1.0"
description = "Static analyzer for prompt injection and confused-deputy risks in LLM agent code."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "sanjaybk7" }]
keywords = [
    "security",
    "static-analysis",
    "llm",
    "agents",
    "prompt-injection",
    "owasp",
    "langgraph",
    "ai-security",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "nbformat>=5.9",
]

[project.urls]
Homepage = "https://github.com/sanjaybk7/injectguard"
Repository = "https://github.com/sanjaybk7/injectguard"
Issues = "https://github.com/sanjaybk7/injectguard/issues"

[project.scripts]
injectguard = "injectguard.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/injectguard"]

[tool.hatch.build.targets.wheel.force-include]
"src/injectguard/taxonomy.yaml" = "injectguard/taxonomy.yaml"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/injectguard"]
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
